feat:添加日志批量插入功能